feat: 이미지 생성 로직